# showsk-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.Droplet  README.md  spec.yaml  sqlx-data.json
.github/workflows/: rust.yml
conf/: base.yaml  local.yaml  production.yaml
migrations/: 20210708185058_create_user_table.sql  20210708185106_create_post_table.sql  20210708185144_create_comment_table.sql
scripts/: db_init.sh  redis_init.sh
src/: authorization.rs  configuration.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/domain/: image.rs  mod.rs  new_user.rs  post.rs  text_body.rs  user_email.rs  user_password.rs  username.rs
src/routes/: add_user.rs  index.rs  mod.rs  submit_post.rs  write_post.rs
src/routes/admin/: dashboard.rs
src/routes/login/: get.rs  mod.rs  post.rs
src/routes/post_content/: get.rs  mod.rs  post.rs
static/css/: main.css
templates/: _post.html  base.html  index.html
templates/admin/: dashboard.html
templates/index/: _post.html  index.html
templates/login/: login.html
templates/post/: post.html
tests/api/: add_post.rs  add_user.rs  admin_dashboard.rs  health_check.rs  helpers.rs  login_user.rs  main.rs
tests/static/: test.txt
