[package]
name = "showsk_rs"
version = "0.1.0"
authors = ["shalpern <samhalpern58@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "showsk_rs"

[dependencies]
actix-http = "=3.0.0-beta.5"
actix-rt = "2.2.0"
actix-service = "=2.0.0-beta.5"
actix-web = "=4.0.0-beta.5"
tera = "1.1"
serde = { version = "1", features = ["derive"] }
config = "0.11.0"
serde-aux = "2.2.0"
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.18", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.4"

[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = [
  "offline",
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
  ]

[dev-dependencies]
actix-rt = "2.2.0"
once_cell = "1.8.0"
reqwest = "0.11.4"
tokio = "1.7.1"

