[package]
name = "showsk_rs"
version = "0.1.0"
authors = ["shalpern <samhalpern58@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "showsk_rs"

[dependencies]
actix-service = "2.0.0"
actix-web = "=4.0.0-beta.19"
actix-files = "0.6.0-beta.13"
tera = "1.12.1"
serde = { version = "1.0.126", features = ["derive"] }
config = "0.11.0"
serde-aux = "2.2.0"
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.19", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
tracing-actix-web = "=0.5.0-beta.9"
validator = "0.14.0"
unicode-segmentation = "1.8.0"
argon2 = { version = "0.3.1", features = ["password-hash"] }
rand_core = { version = "0.6", features = ["std"] }
derive_more = "0.99.16"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
actix-multipart = "0.4.0-beta.12"
sanitize-filename = "0.3.0"
futures = "0.3.16"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.52"
secrecy = { version = "0.8.0", features = ["serde"] }
thiserror = "1.0.30"

[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = [
  "offline",
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
  ]

[dev-dependencies]
actix-rt = "2.2.0"
once_cell = "1.8.0"
reqwest = { version = "0.11.4", features = ["multipart"] }
claim = "0.5.0"
